--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
     "tailwindcss": "^4.0.6",
+    "typescript": "^5.7.3",
     "vite": "^6.1.0"
   }
 }
