--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "lodash-es": "^4.17.21",
+    "postcss-load-config": "^6.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "@types/postcss-load-config": "^2.0.1",
+    "@types/tailwindcss": "^3.0.11",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "tailwindcss": "^4.0.6",
