--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.0.6",
     "@types/postcss-load-config": "^2.0.1",
     "@types/tailwindcss": "^3.0.11",
