--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.21",
     "lodash-es": "^4.17.21",
     "postcss-load-config": "^6.0.1",
     "vue": "^3.5.13",
@@ -17,12 +16,12 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.7",
-    "@tailwindcss/vite": "^4.0.6",
     "@types/postcss-load-config": "^2.0.1",
     "@types/tailwindcss": "^3.0.11",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
-    "tailwindcss": "^4.0.6",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "typescript": "^5.7.3",
     "vite": "^6.1.0"
   }
