--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dexie": "^4.2.1",
     "lodash-es": "^4.17.21",
     "postcss-load-config": "^6.0.1",
     "vue": "^3.5.13",
